[project]
name = "combine-img-as-pdf"
version = "0.1.0"
description = ""
authors = [
    { name = "Michael Currin", email = "18750745+MichaelCurrin@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pillow (>=12.0.0,<13.0.0)"]

[project.scripts]
img2pdf = "img2pdf.__main__:main"

[tool.poetry]
packages = [{ include = "img2pdf" }]

[tool.poetry.group.dev.dependencies]
black = "^25.11.0"
isort = "^7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
