[project]
name = "img2pdf"
version = "0.2.0"
description = "Python CLI tool to combine image files as a PDF file"
authors = [
    { name = "Michael Currin", email = "18750745+MichaelCurrin@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pillow (>=12.0.0,<13.0.0)"]

[tool.poetry]
packages = [{ include = "img2pdf" }]

[project.scripts]
img2pdf = "img2pdf.__main__:main"

[tool.poetry.group.dev.dependencies]
isort = "^7.0.0"
ruff = "^0.14.9"
mypy = "^1.19.1"
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
